<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CustomerInformationActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0FFFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="#015C56"
            android:clickable="false"
            android:text="@string/tittle_informacionPersonal"
            android:textAlignment="viewStart"
            android:textColor="#F1C9A0"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="#7A1414" />

        <EditText
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombreCliente"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/idCardTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/cedula"
            android:inputType="numberSigned|number" />

        <EditText
            android:id="@+id/dateTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/fechaNacimiento"
            android:inputType="date" />

        <EditText
            android:id="@+id/phoneTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/salaryTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/salario"
            android:inputType="numberSigned|number|numberDecimal" />

        <EditText
            android:id="@+id/civilStateTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/estadoCivil"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/addressTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/direccion"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonUpdateCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#015C56"
            android:backgroundTint="#015C56"
            android:backgroundTintMode="add"
            android:onClick="updateCustomer"
            android:text="@string/action_actualizarCliente"
            app:iconTint="#D6CFCF" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>