<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddLoanActivity">

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="145dp"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="93dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="#015C56"
        android:clickable="false"
        android:text="@string/action_form_AgregandoPrestamo"
        android:textAlignment="viewStart"
        android:textColor="#F1C9A0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idCard"
        android:layout_width="195dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/cedula"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/searchIdCard"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="4dp"
        android:onClick="searchUser"
        android:text="@string/action_form_BuscarCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/customerName"
        android:layout_width="201dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:focusable="false"
        android:text="@string/nombreCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idCard" />

    <TextView
        android:id="@+id/customerSalary"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:focusable="false"
        android:text="@string/salario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerName" />

    <TextView
        android:id="@+id/maxSalary"
        android:layout_width="192dp"
        android:layout_height="33dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="75dp"
        android:focusable="false"
        android:text="@string/action_form_SalarioMaximo"
        app:layout_constraintStart_toEndOf="@+id/customerSalary"
        app:layout_constraintTop_toBottomOf="@+id/idCard" />

    <TextView
        android:id="@+id/tipoPrestamoTxt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:text="@string/tipoPrestamo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerSalary" />

    <Spinner
        android:id="@+id/plazosSpinner"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerSalary" />

    <Spinner
        android:id="@+id/tiposSpinner"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerSalary" />

    <TextView
        android:id="@+id/plazoTxt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/plazoPrestamo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerSalary" />

    <Button
        android:id="@+id/btnAgregarPrestamo"
        android:layout_width="145dp"
        android:layout_height="56dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="93dp"
        android:text="@string/agregarPrestamo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cuotaCalculada"
        android:layout_width="177dp"
        android:layout_height="57dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="43dp"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

