<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CustomerPrincipalActivity">


    <TextView
        android:id="@+id/welcomeCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="305dp"
        android:layout_height="568dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeCustomer"
        tools:ignore="TextSizeCheck">

        <Button
            android:id="@+id/viewLoans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="viewLoansCustomer"
            android:text="@string/verPrestamos" />

        <Button
            android:id="@+id/manageSavings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gestionarAhorros" />

        <Button
            android:id="@+id/calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcularCuota" />

        <Button
            android:id="@+id/personalInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="personalInformationCustomer"
            android:text="@string/informacionPersonal" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:text="@string/action_logout" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>