<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CustomerCalcCuotaActivity">


    <Button
        android:id="@+id/btnCalcularCuota"
        android:layout_width="145dp"
        android:layout_height="56dp"
        android:layout_marginBottom="52dp"
        android:onClick="calcularCuota"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/montoPrestamo"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="#015C56"
        android:clickable="false"
        android:text="@string/tittle_CalcularCuota"
        android:textAlignment="viewStart"
        android:textColor="#F1C9A0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plazoTxtCuota"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="133dp"
        android:text="@string/plazoPrestamo"
        app:layout_constraintBottom_toTopOf="@+id/plazosSpinnerCuota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/montoDeseadoCuota"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tipoPrestamoTxtCuota"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="121dp"
        android:text="@string/tipoPrestamo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plazosSpinnerCuota" />

    <Spinner
        android:id="@+id/plazosSpinnerCuota"
        android:layout_width="133dp"
        android:layout_height="43dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="137dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plazoTxtCuota" />

    <EditText
        android:id="@+id/montoDeseadoCuota"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/montoDeseado"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/montoPrestamo" />

    <Spinner
        android:id="@+id/tiposSpinnerCuota"
        android:layout_width="169dp"
        android:layout_height="44dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="135dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoPrestamoTxtCuota" />

    <TextView
        android:id="@+id/cuotaCalculada"
        android:layout_width="157dp"
        android:layout_height="34dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="67dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcularCuota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoPrestamoTxtCuota" />


</androidx.constraintlayout.widget.ConstraintLayout>